--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,43 @@
+buildscript {
+    repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.6.3"
+    }
+}
+
 plugins {
+    id 'application'
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.+'
+    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.15'
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.+'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.24.Final'
+
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+apply plugin: "org.springframework.boot"
